# pnhook

./: LICENSE  README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  phook.c  phook.h  pnhook_bridge.cpp
app/src/main/cpp/art_hook/: art_13_0.h  art_hook.cpp  art_hook.h  hook_stub.s
app/src/main/cpp/inline_hook/: method_analyzer.c  method_analyzer.h  shellcode_arm64.c  shellcode_arm64.h
app/src/main/cpp/memory/: executable_mem.c  executable_mem.h  fake_dlfcn.c  fake_dlfcn.h  memory_dlfcn.c  memory_dlfcn.h  memory_scanner.c  memory_scanner.h
app/src/main/cpp/util/: log.h  stack.c  stack.h
app/src/main/java/com/park/pnhook/: MainActivity.java  NativeBridge.java  StubArtMethodClass.java  TargetClass.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
